@@ -1,3 +1,8 @@
+2013-04-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* include/rgxg/utils.h, lib/utils.c:
+	  - renamed 'length' parameter to 'size'
+	  - renamed 'list' parameter to 'patterns'
+
 2013-04-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/rgxg/types.h, lib/net.c, lib/number.c,
 	  lib/utils.c, src/main.c:
